--- a/modules/client-configuration/pages/clients-rh-rhui.adoc
+++ b/modules/client-configuration/pages/clients-rh-rhui.adoc
@@ -10,7 +10,7 @@ ifeval::[{suma-content} == true]
 If you are running {rhel} clients directly, rather than using {sleses}, you need to use Red Hat sources to retrieve and update packages.
 endif::[]
 
-If you are running your clients in a public cloud, such as Amazon EC2, use this method.
+If you are running clients in a public cloud, such as Amazon EC2, use this method.
 
 It is possible to use RHUI in conjunction with the {redhat} content delivery network (CDN) to manage your {rhel} subscriptions.
 For information about using {redhat} CDN, see xref:client-configuration:clients-rh-cdn.adoc[].
