--- a/modules/client-configuration/pages/autoinst-profiles.adoc
+++ b/modules/client-configuration/pages/autoinst-profiles.adoc
@@ -116,8 +116,8 @@ For more information about using variables in {ay} scripts, see xref:client-conf
 
 These are the most important sections in the {ay} installation file for installing with {productname}:
 
-* ``<add-on>`` allows to add child channels to the installation
-** See https://doc.opensuse.org/projects/autoyast/#Software-Selections-additional with an ``<add-on>`` example
+* ``<add-on>`` allows to add child channels to the installation.
+  For an example, see https://doc.opensuse.org/projects/autoyast/#Software-Selections-additional.
 +
 * ``<general>$SNIPPET('spacewalk/sles_no_signature_checks')</general>` disables signature checks
 
