(HW2023 cleanup) Random tiny fixes (#2588)
* Uppercase fix.

* Tidy-up.

* Cont.

* Cont.

* modules/Cont.

* Continue formatting tidying up.

* Fixed broken Uyuni link.

* Removed 5 years old comment.

* Changed  to .

* Update modules/client-configuration/pages/clients-rh-rhui.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

* Update modules/administration/pages/ssl-certs-hsts.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

* Update modules/client-configuration/pages/autoinst-profiles.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

---------

Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/client-configuration/pages/autoinst-profiles.adoc
+++ b/modules/client-configuration/pages/autoinst-profiles.adoc
@@ -116,27 +116,25 @@ For more information about using variables in {ay} scripts, see xref:client-conf
 
 These are the most important sections in the {ay} installation file for installing with {productname}:
 
-* ``<add-on>`` allows to add child channels to the installation
+* ``<add-on>`` allows to add child channels to the installation.
+  For an example, see https://doc.opensuse.org/projects/autoyast/#Software-Selections-additional.
 +
-  See https://doc.opensuse.org/projects/autoyast/#Software-Selections-additional with an ``<add-on>`` example
-
 * ``<general>$SNIPPET('spacewalk/sles_no_signature_checks')</general>` disables signature checks
 
 * ``<software>`` allows to specify product for the {unifiedinstaller}
+** See https://doc.opensuse.org/projects/autoyast/#CreateProfile-Software with a "<software>" example
 +
-  See https://doc.opensuse.org/projects/autoyast/#CreateProfile-Software with a "<software>" example
-
 * ``<init-scripts config:type="list">$SNIPPET('spacewalk/minion_script')</init-scripts>`` allows the client to register to {productname} as a Salt client.
 
 For more information about {ay}, see https://doc.opensuse.org/projects/autoyast/.
 
-A more recent, Salt-based alternative to {ay}, is Yomi.
+A more recent, {salt}-based alternative to {ay}, is Yomi.
 For information about Yomi, see xref:specialized-guides:salt/salt-yomi.adoc[Install with Yomi].
 
 
 
 [[kickstart]]
-== Kickstart Profiles
+== Kickstart profiles
 
 {kickstart} profiles offer a large number of configuration options.
 To create these profiles, you can upload them, or use a dedicated wizard.
@@ -146,7 +144,7 @@ If you have many custom configuration files located on a client you want to rein
 
 
 
-.Procedure: Creating a File Preservation List
+.Procedure: Creating a file preservation list
 
 . In the {productname} {webui}, navigate to menu:Systems[Autoinstallation > File Preservation] and click btn:[Create File Preservation List].
 
@@ -170,7 +168,7 @@ For more information about Kickstart, see the Red Hat documentation.
 
 
 [[templates-syntax]]
-== Templates Syntax
+== Templates syntax
 
 Parts of your installation file are replaced during the installation.
 Variables are replaced with single values, and code snippets are replaced with whole sections of text.
@@ -219,7 +217,7 @@ System variables take precedence over profile variables, which in turn take prec
 
 
 [[code-snippets]]
-=== Code Snippets
+=== Code snippets
 
 {productname} comes with a large number of predefined code snippets.
 Navigate to menu:Systems[Autoinstallation > Autoinstallation Snippets] to see the list of existing snippets.
