--- a/modules/client-configuration/pages/vhm-nutanix.adoc
+++ b/modules/client-configuration/pages/vhm-nutanix.adoc
@@ -48,8 +48,8 @@ To see which objects and resources have been inventoried, navigate to menu:Syste
 Connecting to the Nutanix Prism API server from a browser using HTTPS can sometimes log an ``invalid certificate`` error.
 If this occurs, refreshing the data from the virtual host manager fails.
 A valid SSL certificate (not self-signed) is required on your Nutanix API server.
+If you are using a custom CA authority for your Nutanix SSL certificate, copy the custom CA certificate to [path]``/etc/pki/trust/anchors`` on the {productname} Server.
 
-If you're using a custom CA authority for your Nutanix SSL certificate, copy the custom CA certificate to [path]``/etc/pki/trust/anchors`` on the {productname} Server.
 Re-trust the certificate by running the [command]``update-ca-certificates`` command on the command line, and restart the spacewalk services.
 ====
 
