--- a/README.adoc
+++ b/README.adoc
@@ -87,7 +87,7 @@ It also contains project planning information.
 To contribute to Uyuni documentation:
 
 .Procedure: Contributing Using a Fork
-. Make sure you have a [github](github.com) account, and that you're signed in.
+. Make sure you have a [github](github.com) account, and that you a`re signed in.
 . Navigate to the [Uyuni Documentation Repo](https://github.com/uyuni-project/uyuni-docs.git), click the `Fork` button in the top-right corner, and select the account you want to use.
 . Wait for github to create your fork and redirect you.
 . Clone the repository to your local machine.
@@ -361,7 +361,7 @@ git pull -ff
 ----
 git checkout -b feature_2
 ----
-. When you're finished on Feature 2, commit your changes and create another PR, just the same as you did for Feature 1.
+. When you are finished on Feature 2, commit your changes and create another PR, just the same as you did for Feature 1.
 
 [WARNING]
 ====
