Fixed snapshots related xrefs and updated changelog https://github.com/SUSE/spacewalk/issues/22960

--- a/modules/reference/pages/systems/system-details/sd-provisioning.adoc
+++ b/modules/reference/pages/systems/system-details/sd-provisioning.adoc
@@ -2,7 +2,7 @@
 = Provisioning
 
 The menu:Systems[Provisioning] section allows you to manage provisioning for the selected client.
-This includes managing and scheduling autoinstallation, booting the selected client, and managing snapshots of the client configuration state.
+This includes managing and scheduling autoinstallation and booting the selected client.
 
 The menu:Systems[Provisioning] tab is split into subtabs:
 
@@ -33,32 +33,3 @@ Click btn:[Remove Cobbler System Profile] to remove the current client's system 
 For more information about unattended provisioning with {cobbler}, see xref:client-configuration:autoinst-unattended.adoc[].
 
 For more information about power management, see xref:client-configuration:power-management.adoc[].
-
-
-
-== Snapshots
-
-This section shows a list of the snapshots taken for the current client.
-Click the name of a snapshot to see more details.
-You can use the subtabs in the menu:Provisioning[Snapshots] tab to see the changes that rolling back to the selected snapshot will make to:
-
-* Group memberships
-* Channel subscriptions
-* Installed packages
-* Configuration channel subscriptions
-* Configuration files
-* Snapshot tags
-
-Click btn:[Rollback to Snapshot] to roll back to the selected snapshot.
-
-For more information about snapshots, see xref:client-configuration:snapshots.adoc[].
-
-
-
-== Snapshot Tags
-
-This sections shows a list of the snapshot tags for the current client.
-Click the tag name to see more information about the snapshot.
-Click btn:[Create System Tag] to apply a new tag to the most recent snapshot.
-
-For more information about snapshots, see xref:client-configuration:snapshots.adoc[].
