diversify section IDs

--- a/modules/retail/pages/retail-uyuni-branchserver.adoc
+++ b/modules/retail/pages/retail-uyuni-branchserver.adoc
@@ -21,7 +21,7 @@ Before you register {productname} branch servers and terminals to your {productn
 
 The products you need for this procedure are:
 
-[[opensuse-channels-cli]]
+[[opensuse-leap-retail-channels-cli]]
 [cols="1,1", options="header"]
 .{opensuse} Channels - CLI
 |===
