--- a/modules/client-configuration/pages/clients-opensuseleap.adoc
+++ b/modules/client-configuration/pages/clients-opensuseleap.adoc
@@ -42,7 +42,7 @@ include::snippets/addchannels_vendor_webui.adoc[]
 Alternatively, you can add channels at the command prompt.
 The channels you need for this procedure are:
 
-[[opensuse-channels-cli]]
+[[opensuse-leap-channels-cli]]
 [cols="1,1", options="header"]
 .{opensuse} Channels - CLI
 |===
@@ -59,7 +59,7 @@ endif::[]
 
 
 ifeval::[{uyuni-content} == true]
-[[opensuse-channels-cli]]
+[[opensuse-leap-channels-cli]]
 [cols="1,1,1"]
 .{opensuse} Channels - CLI
 |===
