--- a/modules/client-configuration/pages/clients-opensuseleapmicro.adoc
+++ b/modules/client-configuration/pages/clients-opensuseleapmicro.adoc
@@ -41,7 +41,7 @@ include::snippets/addchannels_vendor_webui.adoc[]
 Alternatively, you can add channels at the command prompt.
 The channels you need for this procedure are:
 
-[[opensuse-channels-cli]]
+[[opensuse-leapmicro-channels-cli]]
 [cols="1,1", options="header"]
 .{opensuse} Channels - CLI
 |===
@@ -57,7 +57,7 @@ endif::[]
 
 
 ifeval::[{uyuni-content} == true]
-[[opensuse-channels-cli]]
+[[opensuse-leapmicro-channels-cli]]
 
 [cols="1,1", options="header"]
 .{opensuse} Channels - CLI
