Continue with removing trad. client documentation (register/bootstrap) #18879 (#2561)
* https://github.com/SUSE/spacewalk/issues/18879
* Update modules/client-configuration/pages/registration-bootstrap.adoc
Co-authored-by: Ornela Marić <omaric@suse.com>

--- a/modules/client-configuration/pages/registration-bootstrap.adoc
+++ b/modules/client-configuration/pages/registration-bootstrap.adoc
@@ -2,11 +2,10 @@
 = Register Clients with a Bootstrap Script
 
 Registering clients with a bootstrap script gives you control over parameters, and can help if you have to register a large number of clients at once.
-This method works for both Salt and traditional clients.
 
 To register clients using a bootstrap script, we recommend you create a template bootstrap script to begin, which can then be copied and modified.
 The bootstrap script you create is executed on the client when it is registered, and ensures all the necessary packages are deployed to the client.
-There are some parameters contained in the bootstrap script, which ensure the client system can be assigned to its base channel, including activation keys and GPG keys.
+Some parameters in the bootstrap script ensure the client system can be assigned to its base channel, using activation key and GPG key.
 
 It is important that you check the repository information carefully, to ensure it matches the base channel repository.
 If the repository information does not match exactly, the bootstrap script cannot download the correct packages.
@@ -15,7 +14,7 @@ If the repository information does not match exactly, the bootstrap script canno
 ====
 All clients need a bootstrap repository.
 It is automatically created and regenerated on the {productname} Server when products are synchronized.
-A bootstrap repository includes packages for installing Salt on clients, and for registering Salt or traditional clients.
+A bootstrap repository includes packages for installing {salt} on clients, and for registering clients.
 
 For more information about creating a bootstrap repository, see xref:client-configuration:bootstrap-repository.adoc[].
 ====
@@ -45,10 +44,10 @@ A bootstrap script is used by {productname} client systems for simplifying their
 
 The arguments [option]``--activation-keys`` and [option]``--script``, are the only mandatory arguments.
 On the {productname} Server, as root at the command line execute it with the mandatory arguments.
-Replace [systemitem]``<ACTIVATION_KEYS`` and [systemitem]``<EDITED_NAME>`` with your values:
+Replace [systemitem]``<ACTIVATION_KEY`` and [systemitem]``<EDITED_NAME>`` with your values:
 
 ----
-mgr-bootstrap --activation-key=<ACTIVATION_KEYS> --script=bootstrap-<EDITED NAME>.sh
+mgr-bootstrap --activation-keys=<ACTIVATION_KEY> --script=bootstrap-<EDITED_NAME>.sh
 ----
 
 The [command]``mgr-bootstrap`` command offers several other options, including the ability to set a specific hostname, set specific GPG keys, and set the registration method (traditional, salt-minion, or salt-bundle).
