--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -45,22 +45,11 @@ ifeval::[{suma-content} == true]
 | Traditional Clients
 | Salt Clients
 
-| {sle} 15
-| {x86_64}, {ppc64le}, {ibmz}, {aarch64} 
-| {check}
-| {check}
-
-| {sle} 12
+| {sle} 15, 12
 | {x86_64}, {ppc64le}, {ibmz}, {aarch64}
 | {check}
-| {check}
 
-| {sles} for SAP 15
-| {x86_64}, {ppc64le}
-| {check}
-| {check}
-
-| {sles} for SAP 12
+| {sles} for SAP 15, 12
 | {x86_64}, {ppc64le}
 | {check}
 | {check}
@@ -80,22 +69,12 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {check}
 
-| {sles} ES 8
+| {sles} ES 8, 7
 | {x86_64}
 | {cross}
 | {check}
 
-| {sles} ES 7
-| {x86_64}
-| {check}
-| {check}
-
-| {almalinux} 9
-| {x86_64}, {aarch64}
-| {cross}
-| {check}
-
-| {almalinux} 8
+| {almalinux} 9, 8
 | {x86_64}, {aarch64}
 | {cross}
 | {check}
@@ -110,72 +89,27 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
-| {debian} 12
+| {debian} 12, 11, 10
 | {x86_64}
 | {cross}
 | {check}
 
-| {debian} 11
-| {x86_64}
-| {cross}
-| {check}
-
-| {debian} 10
-| {x86_64}
-| {cross}
-| {check}
-
-| {oracle} 9
+| {oracle} 9, 8, 7
 | {x86_64}, {aarch64}
 | {cross}
 | {check}
 
-| {oracle} 8
-| {x86_64}, {aarch64}
-| {cross}
-| {check}
-
-| {oracle} 7
-| {x86_64}, {aarch64}
-| {check}
-| {check}
-
-| {rhel} 9
+| {rhel} 9, 8, 7
 | {x86_64}
 | {cross}
 | {check}
 
-| {rhel} 8
-| {x86_64}
-| {cross}
-| {check}
-
-| {rhel} 7
-| {x86_64}
-| {check}
-| {check}
-
-| {rocky} 9
+| {rocky} 9, 8
 | {x86_64}, {aarch64}
 | {cross}
 | {check}
 
-| {rocky} 8
-| {x86_64}, {aarch64}
-| {cross}
-| {check}
-
-| {ubuntu} 22.04
-| {amd64}
-| {cross}
-| {check}
-
-| {ubuntu} 20.04
-| {amd64}
-| {cross}
-| {check}
-
-| {ubuntu} 18.04
+| {ubuntu} 22.04, 20.04, 18.04
 | {amd64}
 | {cross}
 | {check}
@@ -195,22 +129,12 @@ ifeval::[{uyuni-content} == true]
 | Traditional Clients
 | Salt Clients
 
-| {sle} 15
+| {sle} 15, 12
 | {x86_64}, {ppc64le}, {ibmz}, {aarch64}
 | {check}
 | {check}
 
-| {sle} 12
-| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
-| {check}
-| {check}
-
-| {sles} for SAP 15
-| {x86_64}, {ppc64le}
-| {check}
-| {check}
-
-| {sles} for SAP 12
+| {sles} for SAP 15, 12
 | {x86_64}, {ppc64le}
 | {check}
 | {check}
@@ -223,36 +147,26 @@ ifeval::[{uyuni-content} == true]
 | {opensuse} Leap 15
 | {x86_64}, {aarch64}
 | {check}
-| {check}
-
-| {sll} 9
-| {x86_64}
-| {cross}
-| {check}
-
-| {sles} ES 8
-| {x86_64}
-| {cross}
-| {check}
-
-| {sles} ES 7
-| {x86_64}
-| {check}
-| {check}
+// SUSE Liberty Linux not available at Uyuni for now
+//| {sles} ES 7
+//| {x86_64}
+//| {check}
+// SUSE Liberty Linux not available at Uyuni for now
+//| {sles} ES 8
+//| {x86_64}
+//| {check}
+// SUSE Liberty Linux not available at Uyuni for now
+//| {sll} 9
+//| {x86_64}
+//| {check}
 
 | {alibabaclo} 2
 | {x86_64}, {aarch64}
 | {cross}
 | {check}
 
-| {almalinux} 9
-| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
-| {cross}
-| {check}
-
-| {almalinux} 8
+| {almalinux} 9, 8
 | {x86_64}, {aarch64}
-| {cross}
 | {check}
 
 | {amazon} 2
@@ -263,69 +177,26 @@ ifeval::[{uyuni-content} == true]
 | {centos} 7
 | {x86_64}, {ppc64le}, {aarch64}
 | {check}
-| {check}
 
-| {debian} 11
+| {debian} 12, 11, 10
 | {x86_64}
-| {cross}
 | {check}
 
-| {debian} 10
-| {x86_64}
-| {cross}
-| {check}
-
-| {oracle} 9
+| {oracle} 9, 8, 7
 | {x86_64}, {aarch64}
 | {cross}
 | {check}
 
-| {oracle} 8
-| {x86_64}, {aarch64}
-| {cross}
-| {check}
-
-| {oracle} 7
-| {x86_64}, {aarch64}
-| {check}
-| {check}
-
-| {rhel} 9
+| {rhel} 9, 8, 7
 | {x86_64}
 | {cross}
 | {check}
 
-| {rhel} 8
-| {x86_64}
-| {cross}
-| {check}
-
-| {rhel} 7
-| {x86_64}
-| {check}
-| {check}
-
-| {rocky} 9
-| {x86_64}, {aarch64}, {ppc64le}, {s390x}
-| {cross}
-| {check}
-
-| {rocky} 8
+| {rocky} 9, 8
 | {x86_64}, {aarch64}
-| {cross}
 | {check}
 
-| {ubuntu} 22.04
-| {amd64}
-| {cross}
-| {check}
-
-| {ubuntu} 20.04
-| {amd64}
-| {cross}
-| {check}
-
-| {ubuntu} 18.04
+| {ubuntu} 22.04, 20.04, 18.04
 | {amd64}
 | {cross}
 | {check}
