--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -28,22 +28,12 @@ ifeval::[{suma-content} == true]
 | Traditional Clients
 | Salt Clients
 
-| {sle} 15
+| {sle} 15, 12
 | {x86_64}, {ppc64le}, {ibmz}, {aarch64}
 | {check}
 | {check}
 
-| {sle} 12
-| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
-| {check}
-| {check}
-
-| {sles} for SAP 15
-| {x86_64}, {ppc64le}
-| {check}
-| {check}
-
-| {sles} for SAP 12
+| {sles} for SAP 15, 12
 | {x86_64}, {ppc64le}
 | {check}
 | {check}
@@ -58,22 +48,12 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
-| {sles} ES 8
+| {sles} ES 8, 7
 | {x86_64}
 | {cross}
 | {check}
 
-| {sles} ES 7
-| {x86_64}
-| {check}
-| {check}
-
-| {almalinux} 9
-| {x86_64}, {aarch64}
-| {cross}
-| {check}
-
-| {almalinux} 8
+| {almalinux} 9, 8
 | {x86_64}, {aarch64}
 | {cross}
 | {check}
@@ -83,82 +63,32 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {check}
 
-| {centos} 8
+| {centos} 8, 7
 | {x86_64}, {aarch64}
 | {cross}
 | {check}
 
-| {centos} 7
-| {x86_64}, {aarch64}
-| {check}
-| {check}
-
-| {debian} 12
+| {debian} 12, 11, 10
 | {x86_64}
 | {cross}
 | {check}
 
-| {debian} 11
-| {x86_64}
-| {cross}
-| {check}
-
-| {debian} 10
-| {x86_64}
-| {cross}
-| {check}
-
-| {oracle} 9
+| {oracle} 9, 8, 7
 | {x86_64}, {aarch64}
 | {cross}
 | {check}
 
-| {oracle} 8
-| {x86_64}, {aarch64}
-| {cross}
-| {check}
-
-| {oracle} 7
-| {x86_64}, {aarch64}
-| {check}
-| {check}
-
-| {rhel} 9
+| {rhel} 9, 8, 7
 | {x86_64}
 | {cross}
 | {check}
 
-| {rhel} 8
-| {x86_64}
-| {cross}
-| {check}
-
-| {rhel} 7
-| {x86_64}
-| {check}
-| {check}
-
-| {rocky} 9
+| {rocky} 9, 8
 | {x86_64}, {aarch64}
 | {cross}
 | {check}
 
-| {rocky} 8
-| {x86_64}, {aarch64}
-| {cross}
-| {check}
-
-| {ubuntu} 22.04
-| {amd64}
-| {cross}
-| {check}
-
-| {ubuntu} 20.04
-| {amd64}
-| {cross}
-| {check}
-
-| {ubuntu} 18.04
+| {ubuntu} 22.04, 20.04, 18.04
 | {amd64}
 | {cross}
 | {check}
@@ -178,22 +108,12 @@ ifeval::[{uyuni-content} == true]
 | Traditional Clients
 | Salt Clients
 
-| {sle} 15
+| {sle} 15, 12
 | {x86_64}, {ppc64le}, {ibmz}, {aarch64}
 | {check}
 | {check}
 
-| {sle} 12
-| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
-| {check}
-| {check}
-
-| {sles} for SAP 15
-| {x86_64}, {ppc64le}
-| {check}
-| {check}
-
-| {sles} for SAP 12
+| {sles} for SAP 15, 12
 | {x86_64}, {ppc64le}
 | {check}
 | {check}
@@ -208,14 +128,9 @@ ifeval::[{uyuni-content} == true]
 | {check}
 | {check}
 
-| {sles} ES 8
+| {sles} ES 8, 7
 | {x86_64}
 | {cross}
-| {check}
-
-| {sles} ES 7
-| {x86_64}
-| {check}
 | {check}
 
 | {alibabaclo} 2
@@ -233,72 +148,32 @@ ifeval::[{uyuni-content} == true]
 | {cross}
 | {check}
 
-| {centos} 8
+| {centos} 8, 7
 | {x86_64}, {ppc64le}, {aarch64}
 | {cross}
 | {check}
 
-| {centos} 7
-| {x86_64}, {ppc64le}, {aarch64}
-| {check}
-| {check}
-
-| {debian} 12
+| {debian} 12, 11, 10
 | {x86_64}
 | {cross}
 | {check}
 
-| {debian} 11
-| {x86_64}
-| {cross}
-| {check}
-
-| {debian} 10
-| {x86_64}
-| {cross}
-| {check}
-
-| {oracle} 9
+| {oracle} 9, 8, 7
 | {x86_64}, {aarch64}
 | {cross}
 | {check}
 
-| {oracle} 8
-| {x86_64}, {aarch64}
-| {cross}
-| {check}
-
-| {oracle} 7
-| {x86_64}, {aarch64}
-| {check}
-| {check}
-
-| {rhel} 8
+| {rhel} 8, 7
 | {x86_64}
 | {cross}
 | {check}
 
-| {rhel} 7
-| {x86_64}
-| {check}
-| {check}
-
-| {rocky} 9
+| {rocky} 9, 8
 | {x86_64}, {aarch64}, {ppc64le}, {s390x}
 | {cross}
 | {check}
 
-| {rocky} 8
-| {x86_64}, {aarch64}
-| {cross}
-| {check}
-
-| {ubuntu} 20.04
-| {x86_64}
-| {cross}
-| {check}
-
-| {ubuntu} 18.04
+| {ubuntu} 20.04, 18.04
 | {x86_64}
 | {cross}
 | {check}
