--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -31,19 +31,11 @@ ifeval::[{suma-content} == true]
 | Architecture
 | Salt Clients
 
-| {sle} 15
+| {sle} 15, 12
 | {x86_64}, {ppc64le}, {ibmz}, {aarch64}
 | {check}
 
-| {sle} 12
-| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
-| {check}
-
-| {sles} for SAP 15
-| {x86_64}, {ppc64le}
-| {check}
-
-| {sles} for SAP 12
+| {sles} for SAP 15, 12
 | {x86_64}, {ppc64le}
 | {check}
 
@@ -55,23 +47,15 @@ ifeval::[{suma-content} == true]
 | {x86_64}, {aarch64}
 | {check}
 
-| {sll} 9
+| {sll} 9, 8, 7
 | {x86_64}
 | {check}
 
-| {sles} ES 8
+| {sles} ES 8, 7
 | {x86_64}
 | {check}
 
-| {sles} ES 7
-| {x86_64}
-| {check}
-
-| {almalinux} 9
-| {x86_64}, {aarch64}
-| {check}
-
-| {almalinux} 8
+| {almalinux} 9, 8
 | {x86_64}, {aarch64}
 | {check}
 
@@ -83,59 +67,23 @@ ifeval::[{suma-content} == true]
 | {x86_64}, {aarch64}
 | {check}
 
-| {debian} 12
+| {debian} 12, 11, 10
 | {x86_64}
 | {check}
 
-| {debian} 11
-| {x86_64}
-| {check}
-
-| {debian} 10
-| {x86_64}
-| {check}
-
-| {oracle} 9
+| {oracle} 9, 8, 7
 | {x86_64}, {aarch64}
 | {check}
 
-| {oracle} 8
-| {x86_64}, {aarch64}
-| {check}
-
-| {oracle} 7
-| {x86_64}, {aarch64}
-| {check}
-
-| {rhel} 9
+| {rhel} 9, 8, 7
 | {x86_64}
 | {check}
 
-| {rhel} 8
-| {x86_64}
-| {check}
-
-| {rhel} 7
-| {x86_64}
-| {check}
-
-| {rocky} 9
+| {rocky} 9, 8
 | {x86_64}, {aarch64}
 | {check}
 
-| {rocky} 8
-| {x86_64}, {aarch64}
-| {check}
-
-| {ubuntu} 22.04
-| {amd64}
-| {check}
-
-| {ubuntu} 20.04
-| {amd64}
-| {check}
-
-| {ubuntu} 18.04
+| {ubuntu} 22.04, 20.04, 18.04
 | {amd64}
 | {check}
 
@@ -156,19 +104,11 @@ ifeval::[{uyuni-content} == true]
 | Architecture
 | Salt Clients
 
-| {sle} 15
+| {sle} 15, 12
 | {x86_64}, {ppc64le}, {ibmz}, {aarch64}
 | {check}
 
-| {sle} 12
-| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
-| {check}
-
-| {sles} for SAP 15
-| {x86_64}, {ppc64le}
-| {check}
-
-| {sles} for SAP 12
+| {sles} for SAP 15, 12
 | {x86_64}, {ppc64le}
 | {check}
 
@@ -199,12 +139,8 @@ ifeval::[{uyuni-content} == true]
 | {x86_64}, {aarch64}
 | {check}
 
-| {almalinux} 9
+| {almalinux} 9, 8
 | {x86_64}, {aarch64}
-| {check}
-
-| {almalinux} 8
-| {x86_64}, {aarch64} {ppc64le}, {s390x}
 | {check}
 
 | {amazon} 2
@@ -215,59 +151,23 @@ ifeval::[{uyuni-content} == true]
 | {x86_64}, {ppc64le}, {aarch64}
 | {check}
 
-| {debian} 12
+| {debian} 12, 11, 10
 | {x86_64}
 | {check}
 
-| {debian} 11
-| {x86_64}
-| {check}
-
-| {debian} 10
-| {x86_64}
-| {check}
-
-| {oracle} 9
+| {oracle} 9, 8, 7
 | {x86_64}, {aarch64}
 | {check}
 
-| {oracle} 8
-| {x86_64}, {aarch64}
-| {check}
-
-| {oracle} 7
-| {x86_64}, {aarch64}
-| {check}
-
-| {rhel} 9
+| {rhel} 9, 8, 7
 | {x86_64}
 | {check}
 
-| {rhel} 8
-| {x86_64}
-| {check}
-
-| {rhel} 7
-| {x86_64}
-| {check}
-
-| {rocky} 9
+| {rocky} 9, 8
 | {x86_64}, {aarch64}
 | {check}
 
-| {rocky} 8
-| {x86_64}, {aarch64}, {ppc64le}, {s390x}
-| {check}
-
-| {ubuntu} 22.04
-| {amd64}
-| {check}
-
-| {ubuntu} 20.04
-| {amd64}
-| {check}
-
-| {ubuntu} 18.04
+| {ubuntu} 22.04, 20.04, 18.04
 | {amd64}
 | {check}
 
