Adding support for SLE Micro 5.5/openSUSE Leap Micro 5.5.

--- a/modules/client-configuration/pages/supported-features-sle-micro.adoc
+++ b/modules/client-configuration/pages/supported-features-sle-micro.adoc
@@ -18,11 +18,12 @@ The icons in this table indicate:
 * {salt} the feature is supported only on Salt clients.
 
 
-[cols="1,1,1,1,1", options="header"]
+[cols="1,1,1,1,1,1", options="header"]
 .Supported Features on {micro} Operating Systems
 |===
 
 | Feature
+| {micro} 5.5
 | {micro} 5.4
 | {micro} 5.3
 | {micro} 5.2
@@ -33,8 +34,10 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Operating system packages
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -45,8 +48,10 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Install packages
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -57,8 +62,10 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Remote commands
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -69,8 +76,10 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | System custom states
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -81,8 +90,10 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Organization custom states
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -93,8 +104,10 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Product migration
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -105,8 +118,10 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Advanced Virtual Guest Management {star}
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -117,8 +132,10 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Virtual Guest Installation (image template), as Host OS
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -129,8 +146,10 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | System redeployment (Kickstart)
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -141,8 +160,10 @@ The icons in this table indicate:
 | {salt}: ZeroMQ
 | {salt}: ZeroMQ
 | {salt}: ZeroMQ
+| {salt}: ZeroMQ
 
 | Works with {productname} Proxy
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -153,8 +174,10 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Staging (pre-download of packages)
+| {question}
 | {question}
 | {question}
 | {question}
@@ -165,8 +188,10 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | CVE auditing (requires CVE ID)
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -177,8 +202,10 @@ The icons in this table indicate:
 | {question}
 | {question}
 | {question}
+| {question}
 
 | Package verification
+| {question}
 | {question}
 | {question}
 | {question}
@@ -189,8 +216,10 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | System locking
+| {question}
 | {question}
 | {question}
 | {question}
@@ -201,8 +230,10 @@ The icons in this table indicate:
 | {question}
 | {question}
 | {question}
+| {question}
 
 | System snapshot
+| {cross}
 | {cross}
 | {cross}
 | {cross}
@@ -213,8 +244,10 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Snapshots and profiles
+| {salt}: Profiles supported, Sync not supported
 | {salt}: Profiles supported, Sync not supported
 | {salt}: Profiles supported, Sync not supported
 | {salt}: Profiles supported, Sync not supported
@@ -225,8 +258,10 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Monitoring server
+| {cross}
 | {cross}
 | {cross}
 | {cross}
@@ -237,8 +272,10 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Docker buildhost
+| {cross}
 | {cross}
 | {cross}
 | {cross}
@@ -249,8 +286,10 @@ The icons in this table indicate:
 | {cross}
 | {cross}
 | {cross}
+| {cross}
 
 | Kiwi buildhost
+| {cross}
 | {cross}
 | {cross}
 | {cross}
@@ -261,8 +300,10 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Recurring Actions
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -273,8 +314,10 @@ The icons in this table indicate:
 | N/A
 | N/A
 | N/A
+| N/A
 
 | Yomi
+| {question}
 | {question}
 | {question}
 | {question}
